# mypypackage

./: .buildinfo  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  changelog.html  conduct.html  contributing.html  example.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yml
_modules/: index.html
_modules/mypypackage/: plot.html
_sources/: example.ipynb.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/mypypackage/: index.rst.txt
_sources/autoapi/mypypackage/mypypackage/: index.rst.txt
_sources/autoapi/mypypackage/plot/: index.rst.txt
autoapi/: index.html
autoapi/mypypackage/: index.html
autoapi/mypypackage/mypypackage/: index.html
autoapi/mypypackage/plot/: index.html
docs/: Makefile  conf.py  make.bat
src/mypypackage/: __init__.py  plot.py
tests/: test_mypypackage.py  test_plot.py
