[tool.poetry]
name = "mypypackage"
version = "0.1.0"
description = "An example python package"
authors = ["Tiffany Tang"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
sphinx = "^8.2.3"
myst-nb = "^1.2.0"
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
